--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "bootstrap": "^3.3.5",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
     "jsx-loader": "^0.13.2",
@@ -26,6 +27,7 @@
     "less-loader": "^2.2.1",
     "path": "^0.12.7",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.6",
